# books_recommend

./: .env-exmaple  .gitignore  alembic.ini  pyproject.toml
src/: main.py
src/api/: app.py  dependencies.py
src/api/dto/: authors.py  books.py  genres.py
src/api/routes/: authors.py
src/application/interactors/gpt/: gpt_client_abstract.py
src/application/services/: __init__.py  authors.py  books.py  generic_uow_service.py  genres.py
src/data/db/: configuration.py  settings.py
src/data/db/models/: author.py  book.py  genre.py  recommendation.py  request.py  user.py
src/data/migrations/: env.py
src/data/migrations/versions/: 179796f28313_.py  9e3748704a74_.py  b5ac87aef5dc_.py  dad0e6cd7966_.py
src/data/repositories/sql/: sql_base_repository.py
src/data/uow/: sql_orm_uow.py
src/db/: configuration.py  settings.py
src/db/models/: __init__.py  author.py  base.py  book.py  genre.py  recommendation.py  request.py  user.py
src/dto/: authors.py  books.py  genres.py
src/migrations/: env.py
src/migrations/versions/: 179796f28313_.py  9e3748704a74_.py  dad0e6cd7966_.py
src/repositories/: abstract_repository.py
src/repositories/sql/: sql_base_repository.py
src/repositories/sql/orm/: db_models_repositories.py  generic_repository.py
src/schemas/: authors.py  books.py
src/services/: authors.py  books.py  generic_uow_service.py  genres.py
src/uow/: abstract_uow.py  sql_orm_uow.py
src/utils/: constants.py  custom_types.py  exceptions.py
tests/: conftest.py
tests/services/: authors_test.py  conftest.py
(+7 files in other folders)
